removed button to trigger end of loading, added it to automatically move. fixed overflow issue. some main content added

--- a/style/master.css
+++ b/style/master.css
@@ -1,39 +1,26 @@
-body{
-  overflow: hidden;
-}
+/*font-family: 'Zilla Slab Highlight', cursive;
+font-family: 'Shrikhand', cursive;*/
+
 
 
 .container-fluid{
   width: 100vw;
   height: 100vh;
-  margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  width: 0px;
 }
 
 .loading{
   height: 100%;
   width: 100%;
-  background-color: #2c3e50;
 }
 
 .spaceship{
   position: fixed;
-  border-radius: 50%;
   bottom: 20px;
   left: 0px;
   right: 0px;
   margin: 0 auto;
-  box-shadow: 0 0 0 0 rgba(52, 152, 219,0.5);
-  cursor: pointer;
-  -webkit-animation: pulse 2s infinite cubic-bezier(0.66, 0, 0, 1);
-  -moz-animation: pulse 2s infinite cubic-bezier(0.66, 0, 0, 1);
-  -ms-animation: pulse 2s infinite cubic-bezier(0.66, 0, 0, 1);
-  animation: pulse 2s infinite cubic-bezier(0.66, 0, 0, 1);
-}
-
-.spaceship:hover{
-  -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
 }
 
 .animateSpaceship{
@@ -52,10 +39,82 @@ body{
   background-color: #000000;
 }
 
+.particles-js-canvas-el{
+  height: 99% !important;
+}
+
+.main{
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.header{
+  position: absolute;
+  height: 75%;
+  width: 100%;
+  background-color: #0047aa;
+  overflow: hidden;
+}
+
+.menu{
+  height: 15%;
+  width: 100%;
+  background-color: #ecf0f1;
+}
+
+
+.planet{
+  position: absolute;
+  height: 200%;
+  width: 100%;
+  top: 40%;
+  background-image: url('../images/3dPlanet.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  transform-origin: center;
+  transform-style: preserve-3D;
+  animation: rotating 500s linear infinite;
+}
+
+.heading_text{
+  position: absolute;
+  width: 100%;
+  font-family: 'Shrikhand', cursive;
+  font-size: 8em;
+  color: #ecf0f1;
+  font-weight: bolder;
+  text-align: center;
+
+}
+
+.scramble_about{
+  position: absolute;
+  width: 100%;
+  top: 20%;
+  font-family: 'Zilla Slab Highlight', cursive;
+  font-size: 6em;
+  color: #ecf0f1;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+@keyframes rotating{
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(1turn);
+  }
+}
+
+
+
 @keyframes fly{
   0%  { margin: 0 auto; }
   100% {
-    margin: 70% auto;
+    margin: 150% auto;
     display: none;
         }
 }
@@ -63,12 +122,15 @@ body{
 @-webkit-keyframes fly{
   0%  { margin: 0 auto; }
   100% {
-    margin: 70% auto;
+    margin: 150% auto;
     display: none;
    }
 }
 
-@-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-@keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+
+@media only screen and (min-width: 1599px)
+styles.min.css:3
+.planet {
+    height: 200%;
+    top: 40%;
+}
